2009-02-01 Richard Dale <richard.j.dale@gmail.com>
* Wt::Internal#try_intialize now catches a symbol :wtnew, which should be 
compatible with Ruby 1.9.x

2009-01-31 Richard Dale <richard.j.dale@gmail.com>
* The gitmodel example now works

2009-01-29 Richard Dale <richard.j.dale@gmail.com>
* The construct_copy() function wasn't working with class names containing 
'::', which happens to be all of the classes in Wt::Ruby. Add some logging
when running in garbage collection debug mode to give a warning that a copy 
has failed. Also put the function in the Wt::Ruby namespace.
* Added a marshaller for Wt::Signal<> type as a synonym for Wt::Signal<void>
* Added uint64_t and int64_t marshallers
* Got WAbstractItemModel.createIndex() working with both 'void *' (ie Ruby 
instances), and uint64_t (Ruby Fixnums).
* Added a not quite working gitmodel example

2009-01-28 Richard Dale <richard.j.dale@gmail.com>
* Added a Wt::dynamic_cast() method for use when the corresponding C++ code 
would have needed a dynamic cast. For instance, this C++ code:

    WItemSelectionModel *selection
      = dynamic_cast<WItemSelectionModel *>(event.source());

In Ruby is translated to:

    selection = Wt::dynamic_cast(event.source, Wt::WItemSelectionModel)

* Added a marshaller for std::map<int,boost::any> types
* Fixed the treeview-dragdrop to work with a single threaded version of the
wthttp lib by adding a constant MULTI_THREADED, value false, and not making
any calls that depend on multi-threading.
* Added a std::map<std::string,std::string> marshaller

2009-01-27 Richard Dale <richard.j.dale@gmail.com>
* Added the treeview-dragdrop example, but can't get drag and drop to work 
with it in either Ruby or C++
* Added the Wt::Signal<Wt::WModelIndex,Wt::WMouseEvent> signal type

2009-01-26 Richard Dale <richard.j.dale@gmail.com>
* Special case the WMenu#addItem method and keep the 'contents' arg values in 
a hash to prevent ruby from garbage collecting them. They aren't directly 