@@ -1,3 +1,6 @@
+#!ruby19
+# encoding: utf-8
+
 #
 # Copyright (C) 2008 Emweb bvba, Kessel-Lo, Belgium.
 #
