@@ -195,7 +195,7 @@ extern WTRUBY_EXPORT void mapPointer(VALUE obj, smokeruby_object *o, Smoke::Inde
 extern WTRUBY_EXPORT void unmapPointer(smokeruby_object *, Smoke::Index, void*);
 
 extern WTRUBY_EXPORT const char * resolve_classname(smokeruby_object * o);
-extern WTRUBY_EXPORT void rb_str_catf(VALUE self, const char *format, ...) __attribute__ ((format (printf, 2, 3)));
+extern WTRUBY_EXPORT VALUE rb_str_catf(VALUE self, const char *format, ...) __attribute__ ((format (printf, 2, 3)));
 
 extern WTRUBY_EXPORT VALUE findMethod(VALUE self, VALUE c_value, VALUE name_value);
 extern WTRUBY_EXPORT VALUE findAllMethods(int argc, VALUE * argv, VALUE self);
